# Uni-Work

./: .gitattributes  .gitignore
MRes/: NSW AIP Poster 2025.pptx
PhD/Teaching/2026/COMP2200/Semester 1/: main.py  pyproject.toml
PhD/Teaching/2026/COMP2200/Semester 1/Week 1/: untitled.ows
PhD/Teaching/2026/COMP2200/Semester 1/Week 2/: Week_2_Understanding_Columns.ipynb  pyproject.toml  untitled.ows
PhD/Teaching/2026/COMP2200/Semester 1/Week 3/: untitled.ows
PhD/Teaching/2026/COMP2200/Semester 1/Week 5/: Week_5_Train_Test_Split.ipynb  untitled.ows
PhD/Teaching/2026/COMP2200/Semester 1/Week 6/: watchband (2).csv
PhD/Teaching/2026/COMP2200/Semester 1/Week 6/Week 6 Prac/: Week_6_From_Data_to_Models.ipynb  fetal_health (1).csv  iris_test (1).csv  iris_train (1).csv  untitled.ows  watchband (2).csv
PhD/Teaching/2026/COMP2200/Semester 1/Week 7/: Painted_data.csv  Untitled.ipynb  main.py  pyproject.toml  untitled.ows
PhD/Teaching/2026/COMP2200/Semester 1/Week 7/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
PhD/Teaching/2026/COMP2200/Semester 1/Week 8/: main.py
PhD/Teaching/2026/COMP2200/Semester 1/Week 9/: Tictactoe.ipynb  penguins.csv  penguins.ipynb  tictactoe.csv
PhD/Teaching/2026/COMP2200/Semester 1/practice-exam/: Q2_data.xlsx  Q3_data (1).xlsx  Testing (1).csv  Training (1).csv  untitled.ows
PhD/Teaching/2026/COMP2200/Semester 1/week11prac/: TopRoutesJuly2014February2026.xlsx  TopRoutesJuly2014Jul2025.xlsx  Week 11 Practical.ipynb
PhD/Teaching/2026/COMP2200/Semester 1/week12prac/: Week 12 Practical.ipynb  simple_recommenders.py
(+1006 files in other folders)
